tests/miniJava/neg/005241_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] { ( ) { return 0 ; } }
